test/Lower/circt/round_trip/conversion_failure_exits_nonzero.nsl
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// test/Lower/circt/round_trip/conversion_failure_exits_nonzero.nsl
// — M6 US1 harness fixture (T029). Asserts FR-028 fail-fast
// behaviour: when the M6 NSLToCIRCTPass cannot legalize a
// reachable `nsl::*` op, `nslc -emit=hw` exits non-zero AND emits
// a diagnostic naming the unmatched op.
//
// **Phase 5 status: PASSES** — Phase 4 lands the ModuleOp /
// DeclareOp / Port / Submodule / Param structural rewrites plus
// inline ConstantOp / TransferOp-to-output-port handling. Phase
// 5 (US3) lands FSM lowering and refactors Phase 4's per-op
// fail-fast `else` arm into a "move-and-defer" path — but the
// fail-fast still fires on a specific Phase-4 limitation: an
// output-port write whose source is not a Phase-4-materialised
// value (combinational forward-flow only at Phase 4). The fixture
// body uses `reg r[8] = 0;` + `r := a;` + `q = r;` to trigger
// exactly that path: `q = r;` (the third statement) writes to
// output port `q` from `r` which is a `nsl.reg` (Phase 6
// territory), so Phase 4's TransferOp arm aborts with the
// documented diagnostic.
//
// Once Phase 6 lands the state-family patterns, this fixture must
// be updated again to exercise some op kind whose pattern hasn't
// shipped, OR retired in Phase 8 polish.

// RUN: not %nslc -emit=hw %s 2>&1 | %FileCheck %s

declare M {
  input a[8];
  output q[8];
}

module M {
  reg r[8] = 0;
  r := a;
  q = r;
}

// CHECK: error: M6 cannot lower output-port write whose source
